--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -15,12 +15,10 @@ RUN apt-get update && apt-get install -y \
     curl \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh -s -- --to /usr/local/bin
 
 # Create non-root user and set up directories
-RUN useradd -m -u 1001 appuser && \
-    mkdir -p /app/outputs /app && \
-    chown -R appuser:appuser /app
+RUN useradd -m -u 1001 appuser &&     mkdir -p /app/outputs /app &&     chown -R appuser:appuser /app
 
 USER appuser
 WORKDIR /app
@@ -29,7 +27,7 @@ WORKDIR /app
 COPY --chown=appuser:appuser . .
 
 # Set environment variables
-ENV PATH="/root/.cargo/bin:/app/venv/bin:$PATH"
+ENV PATH="/app/venv/bin:$PATH"
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
