--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-transformers
-torch
-scipy
-accelerate
+fastapi==0.110.0
+uvicorn==0.29.0
+transformers==4.41.2
+torch==2.3.0
+scipy==1.13.0
+accelerate==0.30.1
