--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-fastapi==0.110.0
-uvicorn==0.29.0
-transformers==4.41.2
-torch==2.3.0
-scipy==1.13.0
-accelerate==0.30.1
+Flask==2.3.3
+torch>=2.0.0
+transformers>=4.30.0
+scipy>=1.10.0
+numpy>=1.24.0
+pydub>=0.25.1
+requests>=2.31.0
+accelerate>=0.20.0
+sentencepiece>=0.1.99
+librosa>=0.10.0
