--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 Flask==2.3.3
+TTS==0.22.0
 torch>=2.0.0
-transformers>=4.30.0
-scipy>=1.10.0
+torchaudio>=2.0.0
 numpy>=1.24.0
 pydub>=0.25.1
+gTTS==2.4.0
 requests>=2.31.0
-accelerate>=0.20.0
-sentencepiece>=0.1.99
-librosa>=0.10.0
