--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Flask==2.3.3
+torch>=2.0.0
+transformers>=4.45.0
+numpy>=1.21.0
+scipy>=1.7.0
+librosa>=0.8.0
+soundfile>=0.10.0
+accelerate>=0.20.0
+sentencepiece>=0.1.95
 gTTS==2.4.0
-pydub>=0.25.1
-requests>=2.31.0
